--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Full Screen Website Embed</title>
+  <title>A level - Physics</title>
+  <link rel="icon" type="image/png" href="img.png">
   <style>
     html, body, iframe {
       margin: 0;
